--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,14 +10,13 @@
 
       gtag('config', 'G-1MXVDHSJ5W');
     </script>
-    <!-- CSS only -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" rel="preload">
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <!-- JavaScript Bundle with Popper -->
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <!--Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
     <style type="text/css">
         /*Rules for sizing the icon*/
         .material-icons-outlined.md-18 { font-size: 18px; }
@@ -42,13 +40,6 @@
     {% endblock %}
 </body>
 <script>
-    var navbarToggler = document.querySelector('.navbar-toggler');
-    var navbarCollapse = document.querySelector('.navbar-collapse');
-
-    navbarToggler.addEventListener('click', function() {
-        navbarCollapse.classList.toggle('show');
-    });
-
     // Get the element to be animated
     const fadeElem = document.querySelector('.fade-in');
 
