--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
     <meta name="author" content="Marco Rodrigues">
     <meta property="og:image" content="static/images/profile-pic.webp"/>
     <meta name="keywords" content="Data Science, AI, Web3">
-    <meta name="description" content="Discover a refreshing Data Science, AI, and Web3 portfolio curated by Marco. A freelancer proficient in various IT skills, spanning from coding to technical writing.">
-    <title>Marco Rodrigues | Data Science, AI & Web3</title>
+    <meta name="description" content="50% Parenting 👨‍🍼 50% Python Developer & Data Scientist 👨‍💻. Marco Rodrigues is among the top 3% freelancers on Upwork. With a rich portfolio in Data Science, AI and Python Automation.">
+    <title>Marco Rodrigues | Data Science, AI & Automation</title>
     <link rel = "icon" href = "static/images/profile-pic.webp" type = "image/x-icon" style="border-radius: 50%;">
 </head>
 <body>
