--- a/templates/index.html
+++ b/templates/index.html
@@ -16,17 +16,10 @@
         <div class="about-header">
             <div class="about-text">
                 <p>                    
-                    With <strong>over 5 years of engineering experience</strong>, I can tag myself as a builder. With a <strong>Masters in Nanotechnology and
-                    Microelectronics</strong>, it took me a few years to understand that the easiest and fastest way to build is with a simple
-                    laptop 💻.
+                  Former Microelectronics Engineer, who found out that the easiest and fastest way to build is with a laptop 💻.
                     <br>
                     <br>
-                    I am a <strong></strong>Python Developer</strong> passionately dedicated to <strong>Data Science 📈, AI 🤖, and Web3 technologies 🌐</strong>. The change was
-                    progressive, early on, I was learning Python after my working hours, then the pandemic came, and I got more time to dive
-                    into it. Along the way, I landed a job that combined microelectronics and programming. And the time came, to enroll in a
-                    Data Science bootcamp that equipped me with the essential skills to excel as a developer. Shortly after, an opportunity
-                    arose to work as a Software Engineer in French Guiana. I packed up the essentials, and I flew to the Amazon rainforest
-                    to work as a <strong>Software Engineer</strong> at the <strong>European Spaceport</strong>.
+                    <strong>Python Developer</strong> passionately dedicated to <strong>Data Science 📈, AI 🤖, and Automation 🌐</strong>.
                     <br>
                     <br>
                     Recently, life gave me the best gift, a beautiful daughter.
